cpp/test/Slice/errorDetection/InterfaceRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

interface Intf1 { void op(); };
interface Intf1 { void op(); };
interface Intf1;

local interface Intf2 { void op(); };
local interface Intf2 { void op(); };
local interface Intf2;
